# skorie-news

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: summary_nov25.md
news/: admin.py  api.py  chat.md  forms.py  mail.py  model_mixins.py  models.py  readme.md  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_subscription_bounce_reason_subscription_bounced_and_more.py  0003_rename_message_issue_rename_submission_mailing_and_more.py  0004_newsletter_public_alter_subscription_activation_code.py  0005_remove_subscription_sub_user_xor_email_not_both_and_more.py  0006_deliveryevent_directemail_alter_delivery_options_and_more.py  0007_remove_subscription_sub_user_xor_email_not_both_and_more.py  0008_rename_message_mailing_issue_alter_mailing_status.py  0009_remove_subscription_email_opt_in_subscription_active_and_more.py  0010_alter_directemail_sender_alter_subscription_active_and_more.py  0011_alter_delivery_options_alter_directemail_options_and_more.py  0012_directemail_template.py  0013_alter_directemail_status.py
news/tests/: conftest.py  test_api.py  test_direct_email.py  test_models.py  test_subscriptions.py
skorie_news/: admin.py  api.py  apps.py  forms.py  mail.py  model_mixins.py  models.py  serializers.py  signals.py  urls.py  urls_api.py  views.py
skorie_news/migrations/: 0001_initial.py  0002_delivery_uniq_delivery_esp_message_and_more.py  0003_alter_article_image_alter_attachment_file_and_more.py  0004_alter_mailing_options_newsletter_reply_to_and_more.py  0005_alter_article_image_position_and_more.py  0005_alter_article_image_position_newsactivitylog.py  0006_alter_delivery_message_id.py  0007_alter_delivery_campaigns_alter_delivery_tags_and_more.py
skorie_news/skorie_storage/: storage_backends.py
skorie_news/templatetags/: newstags.py
skorie_news/tests/: conftest.py  test_api.py  test_direct_email.py  test_models.py  test_subscriptions.py
skorie_news/tools/: api_mixins.py  auth.py  country_timezones.csv  decorators.py  exceptions.py  model_mixins.py  permission_mixins.py  permissions.py  ref.py  storage_backends.py  testing_tools.py  utils.py  views_mixins.py
templates/: newsletter_detail.html  newsletter_list.html  submission_archive.html  subscription_subscribe_user.html  subscription_unsubscribe_user.html
templates/email/: sub_request.html
templates/message/: article_confirm_delete.html
templates/news/: submission_archive.html  subscription_activate.html  subscription_subscribe_activated.html
templates/user/: manage_subscriptions.html
users/: README.md  admin.py  api.py  forms.py  keycloak.py  models.py  notifications.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_verificationcode_uniq_active_user_channel_purpose.py  0003_verificationcode_uniq_active_user_channel_purpose.py
users/tests/: test_apis.py  test_models.py
web/: models.py  roles_and_disciplines.py  settings.py  urls.py  wsgi.py
web/migrations/: 0001_initial.py
(+120 files in other folders)
