[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-users"
version = "0.4.13"
description = "A reusable Django app to manage users that also use keycloak for SSO."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Phoebe Bright", email = "phoebebright310@gmail.com"}
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=3.2,<5.3",
    "setuptools>=65.5.1",
]

[project.urls]
Homepage = "https://github.com/phoebebright/django-users"
Repository = "https://github.com/phoebebright/django-users"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will automatically find all packages
# Equivalent to find_packages() in setup.py
